--- a/plugins/widgettemplatemenu/samples/index.html
+++ b/plugins/widgettemplatemenu/samples/index.html
@@ -3,10 +3,10 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Bootstrap, from Twitter</title>
+    <title>CKEditor Template Menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Adds a menu button to CKEditor with Bootstrap templates, media insert, code insert, map insert, and a quotebox" />
+    <meta name="author" content="albatrossdigital.com" />
     <!-- Le styles -->
     <link data-require="bootstrap-css" data-semver="3.3.1" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
     <link data-require="bootstrap@*" data-semver="3.3.1" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
@@ -40,26 +40,30 @@
 
   <body>
     <div class="container">
-      <h1>CKEditor Bootstrap Widgets</h1>
+      <h1>CKEditor Template Menu</h1>
       <p>
-        Give your content authors the ability to add responsive layout elements to their pages.  CKEditor widgets are provided for common 
-        <a href="http://getbootstrap.com/">Bootstrap</a> layouts:
+        Adds a gear menu button to CKEditor to allow authors to easily add and edit templates.
       </p>
+      <p>This plugin requires one or more of the following CKEditor plugins.</p>
       <ul>
-        <li>Left sidebar image</li>
-        <li>Right sidebar image</li>
-        <li>Two columns</li>
-        <li>Three columns</li>
-        <li>Alert box</li>
+        <li><a href="http://ckeditor.com/addon/widgetcommon">Common Widgets</a></li>
+        <li><a href="http://ckeditor.com/addon/widgetbootstrap">Bootstrap Widgets</a></li>
+        <li><a href="http://ckeditor.com/addon/oembed">Media (oEmbed)</a></li>
+        <li><a href="http://ckeditor.com/addon/leaflet">Leaflet</a></li>
+        <li><a href="http://ckeditor.com/addon/codesnippet">Code Snippit</a></li>
       </ul>
-      <p>Each widget can have its own button, or you can use the Widget Template Menu plugin to create a dropdown menu of templates.</p>
-      <p><strong>Watch a demo: <a href="http://albatrossdigital.com/node/41">http://albatrossdigital.com/node/41</a></strong></p>
+      <p>Buttons will be added to the menu for each of the plugins that is bundled with CKEditor or added with config.extraPlugins.</p>
+
+
+      <ul>
+        <li><strong><a href="http://albatrossdigital.com/node/41">Watch a demo</a></strong></li>
+        <li><strong><a href="http://albatrossdigital.github.io/widgetcommon">Documentation and live demos</a></strong></li>
+      </ul>
 
       <h2>Using</h2>
       <p>Install the plugin using the standard <a href="http://docs.ckeditor.com/#!/guide/dev_plugins" target="_blank">CKEditor plugin installation instructions</a>.  
       We recommend manually building your editor on ckeditor.com, or using <a href="https://github.com/albatrossdigital/ckeditor-sandbox" target="_blank">our base editor build</a>, which will include everything you need.</p>
       <!--<pre>&lt;script src="http://albatrossdigital.github.io/ckeditor-sandbox/ckeditor.js"&gt;&lt;/script&gt;</pre>-->
-      <p>Once you have added the plugin, you can use our Widget Template Menu plugin or the standard Toolbar Groups.  For each, you must set extraPlugins and allowedContent.</p>
       <ul>
         <li><a href="#widgetTemplateMenu">Widget Template Menu</a></li>
         <li><a href="#toolbarGroups">Toolbar Groups</a></li>
@@ -71,7 +75,7 @@
       <pre>
         CKEDITOR.replace( 'editor1', {
           plugins: 'wysiwygarea,toolbar,basicstyles,menubutton,link,sourcearea,image2,widget',
-          extraPlugins: 'widgetbootstrap,widgettemplatemenu',
+          extraPlugins: 'widgetcommon,widgetbootstrap,oembed,leaflet,codesnippet,widgettemplatemenu',
           height: 400,
           toolbar: [
             [ 'Source', '-', 'NewPage', 'Preview', '-', 'Templates' ],
@@ -94,7 +98,7 @@
 
         CKEDITOR.replace( 'editor1', {
           plugins: 'wysiwygarea,toolbar,basicstyles,menubutton,link,sourcearea,image2,widget',
-          extraPlugins: 'widgetbootstrap,widgettemplatemenu',
+          extraPlugins: 'widgetcommon,widgetbootstrap,oembed,leaflet,codesnippet,widgettemplatemenu',
           height: 400,
           toolbar: [
             [ 'Source', '-', 'NewPage', 'Preview', '-', 'Templates' ],
@@ -114,7 +118,7 @@
       <pre>
         CKEDITOR.replace( 'editor2', {
           plugins: 'wysiwygarea,toolbar,basicstyles,menubutton,link,sourcearea',
-          extraPlugins: 'image2,widget,widgetbootstrap',
+          extraPlugins: 'image2,widget,widgetcommon',
           height: 400,
           toolbarGroups : [
             { name: 'clipboard',   groups: [ 'clipboard', 'undo', 'source' ] },
@@ -140,7 +144,7 @@
 
         CKEDITOR.replace( 'editor2', {
           plugins: 'wysiwygarea,toolbar,basicstyles,menubutton,link,sourcearea',
-          extraPlugins: 'image2,widget,widgetbootstrap',
+          extraPlugins: 'image2,widget,widgetcommon',
           height: 400,
           toolbarGroups : [
               // On the basic preset, clipboard and undo is handled by keyboard.
